# ElaboratoToDoList

./: .gitignore  CMakeLists.txt  Date.cpp  Date.h  Item.h  SetOfLists.cpp  SetOfLists.h  ToDo.h  ToDoList.cpp  ToDoList.h  main.cpp
test/: CMakeLists.txt  DateTest.cpp  SetOfListsTest.cpp  ToDoListTest.cpp  ToDoTest.cpp  runAllTest.cpp
